--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </nav>
   <br><br>
   <h1 class="g1"><strong><b>Good News!</b></strong></h1><br>
-  <h3 class="g2">Sonicware is <b>back</b>!</h3>
+  <h3 class="g2">Sonicware is <b>back</b>!</h3><br><br>
   <script src="script.js"></script>
 </body>
 
