--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   <br><br>
   <h1 class="g1"><strong><b>Good News!</b></strong></h1><br>
   <h3 class="g2">Sonicware is <b>back</b>!</h3><br><br>
+  <button class="btn btn-outline-primary" onclick="location.href = '/loadstring'">Get Script</button>
   <script src="script.js"></script>
 </body>
 
